Change and add destinations to small villages in Germany

--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
-                <h2>Belize</h2>
+            <div class="destination" id="molpe">
+                <h2>Molpertshaus</h2>
             </div>
 
-            <div class="destination" id="barcelona">
-                <h2>Barcelona</h2>
+            <div class="destination" id="menne">
+                <h2>Mennisweiler</h2>
+            </div>
+
+            <div class="destination" id="boeckis">
+                <h2>B&ouml;ckis</h2>
+            </div>
+
+            <div class="destination" id="wirrensegel">
+                <h2>Wirrensegel</h2>
+            </div>
+
+            <div class="destination" id="mailand">
+                <h2>Mailand</h2>
             </div>
         </div>
     </div>
